tekton/tekton-dashboard-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekton-dashboard-lb
  namespace: tekton-pipelines
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/name: tekton-dashboard
    app.kubernetes.io/part-of: tekton-dashboard
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9097
  selector:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
